<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/ingredient_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:maxLines="2"
        android:textSize="16sp"
        tools:text="Sugar" />

    <TextView
        android:id="@+id/ingredient_quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_below="@+id/ingredient_name_text_view"
        android:textSize="14sp"
        tools:text="3" />

    <TextView
        android:id="@+id/ingredient_measure_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ingredient_name_text_view"
        android:layout_toRightOf="@+id/ingredient_quantity_text_view"
        android:layout_toEndOf="@+id/ingredient_quantity_text_view"
        android:textSize="14sp"
        tools:text="CUP" />
</RelativeLayout>